app-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  selector:
    app: ngnix
  ports:
  - port: 80
    targetPort: 80
