db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  type: ClusterIP
  selector:
    app: app-database
  ports:
  - port: 3306
    targetPort: 3306
